src/test/test-models/bad/continue2.stan
// tests correct value passed from transformed parameters
transformed parameters {
  real y;
  continue;
}
model {
}
